Wed Sep 25 16:12:27 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/Makefile:

	  Remove for loop and use recursive make rule
	  similar to the one in rules.nested.GNU.  This will enable better
	  detection of build errors during recursive makes.

	* TAO_IDL/Makefile.dependencies:

	  Add MAKEFILE=Makefile.dependencies so
	  that recursive makes will work properly. 

	  Patches and comments sent in by Craig Rodrigues <crodrigu@bbn.com>.

Wed Sep 25 14:35:17 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/Makefile.BE:
	* TAO_IDL/TAO_IDL_BE.bor:
	* TAO_IDL/be/Makefile.am:

	  Added missing files and updated dependencies again.

Wed Sep 25 14:09:20 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/Makefile.BE:
        * TAO_IDL/Makefile.FE:
        * TAO_IDL/Makefile.EXE:

	  Updated dependencies.

Wed Sep 25 12:40:23 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:

	  Removed unused local variables.

	* TAO_IDL/fe/fe_interface_header.cpp:

	  Commented out an unused parameter.

	* TAO_IDL/be/be_visitor_component/component_ss.cpp:

	  Filled in visit_component() method.

Wed Sep 25 12:24:11 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/Makefile.BE:
        * TAO_IDL/Makefile.FE:
        * TAO_IDL/TAO_IDL_BE.bor:
        * TAO_IDL/TAO_IDL_FE.bor:
        * TAO_IDL/ast/Makefile.am:
        * TAO_IDL/be/Makefile.am:

	  Fixed typos.

Wed Sep 25 11:12:59 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/ast/ast_eventtype.cpp:
        * TAO_IDL/ast/ast_eventtype_fwd.cpp:
        * TAO_IDL/be/be_eventtype.cpp:
        * TAO_IDL/be/be_eventtype_fwd.cpp:
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
        * TAO_IDL/be/be_visitor_eventtype.cpp:
        * TAO_IDL/be/be_visitor_eventtype_fwd.cpp:
        * TAO_IDL/be/be_visitor_eventtype.cpp:
        * TAO_IDL/be/be_visitor_eventtype_fwd.cpp:
        * TAO_IDL/be/be_visitor_component/any_op_ch.cpp: