@@ -1,3 +1,13 @@
+Wed Sep 25 17:05:32 2002  Jeff Parsons <parsons@cs.wustl.edu>
+
+        * TAO_IDL/be/be_visitor_root/root_sth.cpp:
+
+	  Added missing generated newline and annotation.
+
+	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
+
+	  Added missing generated newline.
+
 Wed Sep 25 16:12:27 2002  Jeff Parsons <parsons@cs.wustl.edu>
 
         * TAO_IDL/Makefile:
